added Platformer for game algorithm.