@@ -8,7 +8,6 @@ import org.junit.runners.JUnit4;
 
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 @RunWith(JUnit4.class)
 public class PredicateTest {
@@ -34,7 +33,7 @@ public class PredicateTest {
 
         List<Person> personList = SearchListOfObjects.createListOfObjects();
         List<Person> result = personList.stream().filter(p -> startsWIthM.test(p.getName()))
-                .filter(p -> overAge25.test(p.getAge())).collect(Collectors.toList());
+                .filter(p -> overAge25.test(p.getAge())).toList();
         assert (result.size() == 2);
     }
 }
